[tool.poetry]
name = "50-053-fuzzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "50"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
aiocoap = {extras = ["ws"], version = "^0.4.7"}
httpx = {extras = ["cli"], version = "^0.26.0"}
openapi3-parser = "^1.1.17"
python-dotenv = "^1.0.1"
bumble = {path = "zephyr/bumble"}
coverage-lcov = "^0.2.5"
toml = "^0.10.2"
coverage = "^6"
lcovparser = {path = "lcovparser"}


[tool.poetry.group.coap.dependencies]
cherrypy = "^18.9.0"
pyserial = "^3.5"
sphinx = "1.2.2"
cachetools = "2.0.0"
pymongo = "^4.6.1"


[tool.poetry.group.django.dependencies]
django = "^5.0.2"
python-dotenv = "^1.0.1"
django-admin-datta = "^1.0.10"
django-dynamic-datatb = "^1.0.25"
django-api-generator = "^1.0.17"
django-debug-toolbar = "^4.3.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
